# mistela-flask

./: .gitignore  LICENSE  README.md  environment.yml  pyproject.toml  requirements.txt  wsgi.py
.github/workflows/: ci.yml  publish.yml
docs/: changelog.md
mistelaflask/: __init__.py  admin.py  auth.py  main.py  models.py  utils.py  wsgi.py
mistelaflask/static/css/: mistela.css
mistelaflask/templates/: admin.html  admin_events.html  admin_guests.html  admin_index.html  admin_responses.html  base.html  events.html  footer.html  guest_responses.html  header.html  index.html  login.html  navbar.html  otp_login.html  quick_menu.html
mistelaflask/templates/admin/: admin.html  admin_event_form.html  admin_events.html  admin_events_add.html  admin_events_base.html  admin_events_detail.html  admin_guests.html  admin_index.html  admin_navbar.html  admin_responses.html
mistelaflask/templates/auth/: login.html  otp_login.html
mistelaflask/templates/guest/: guest_events.html  guest_events_detailed.html  guest_invitations.html  guest_invitations_detailed.html
mistelaflask/views/: admin.py  admin_events.py  admin_view_base.py  admin_view_events.py  admin_view_guests.py  admin_view_invitations.py  admin_view_protocol.py
mistelaflask/views/admin_views/: __init__.py  admin_view_base.py  admin_view_events.py  admin_view_guests.py  admin_view_invitations.py  admin_view_locations.py  admin_view_main_events.py  admin_view_protocol.py
mistelaflask/views/guest_views/: __init__.py  guest_view_events.py  guest_view_invitations.py  guest_view_protocol.py
scripts/: db_scripts.py  generate_initial_db.py  images_processing.py
(+37 files in other folders)
